# llm-log-compressor

./: .gitignore  README.md  package-lock.json  package.json
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/loglens-bench/: Cargo.toml
rust/loglens-bench/src/: main.rs
rust/loglens-core/: Cargo.toml
rust/loglens-core/src/: lib.rs
rust/mcp/: Cargo.toml
rust/mcp/src/: main.rs
src/: index.ts
src/core/compress/: compressor.ts  group.ts  normalize.ts  patterns.ts  stacktrace.ts
src/core/store/: logStore.ts
src/mcp/: server.ts  tools.ts
test/: test.ts  tokenizers.md
test/sample_logs/: benchmark-report.html  benchmark-report.json
